# http2

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
cmake/: HTTP2.cmake
docs/: Doxyfile
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: client.rst  constants.rst  index.rst  request-response.rst  server.rst  session.rst  settings.rst  stream.rst
docs/sphinx/examples/: client-get.rst  echo-server.rst  index.rst  push-asset.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: handle-goaway.rst  index.rst  inspect-session-state.rst  read-request-body.rst  respond-with-file.rst  tls-h2.rst
docs/sphinx/tutorials/: client-request-with-settings.rst  index.rst  push-an-asset.rst  stream-a-large-response.rst
examples/: client_get.cpp  echo_server.cpp  push_asset.cpp
include/polycpp/: http2.hpp
include/polycpp/http2/: events.hpp  http2.hpp
include/polycpp/http2/detail/: aggregator.hpp  constants.hpp  handle_bodies.hpp  http2_detail_decl.hpp  nghttp2_allocator.hpp  server_impl.hpp  server_impl_decl.hpp  session_impl.hpp  types.hpp  types_impl.hpp  util.hpp
src/: http2.cpp
tests/: test_http2.cpp  test_ipv6_helpers.hpp
tests/test_helpers/: platform_helpers.hpp
